--- a/supervised.ipynb
+++ b/supervised.ipynb
@@ -210,7 +210,9 @@
     "df = df.sample (20000)\n",
     "print(df.info())\n",
     "\n",
-    "u, g, r, i, z = df[\"u_mag\"].values, df[\"g_mag\"].values, df[\"r_mag\"].values, df[\"i_mag\"].values, df[\"z_mag\"].values\n",
+    "u, g, r, i, z = df[\"u_mag\"].values, df[\"g_mag\"].values, \\\n",
+    "                df[\"r_mag\"].values, df[\"i_mag\"].values, \\\n",
+    "                df[\"z_mag\"].values\n",
     "colors = np.array([u - g, g - r, r - i, i - z]).transpose()\n",
     "print(colors.shape)\n",
     "names = np.array([\"u - g\", \"g - r\", \"r - i\", \"i - z\"])\n",
@@ -508,7 +510,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Lets do the same but now with a Random Forest\n",
+    "## What is Random Forest?\n",
+    "\n",
+    "### Decision Trees\n",
+    "\n",
+    "are a non-parametric supervised learning method used for classification and regression. It creates a model that predicts the value of a target variable by **learning simple decision rules inferred from the data features**.\n",
+    "\n",
+    "<img src=\"images/des_tree.png\" width=\"600\">\n",
+    "\n",
     "\n",
     "### RFC\n",
     "\n",
@@ -1133,6 +1142,208 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Classification Probability"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-08-27T15:07:39.123077Z",
+     "start_time": "2019-08-27T15:07:39.069533Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>star</th>\n",
+       "      <th>quasar</th>\n",
+       "      <th>white dwarf</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.996340</td>\n",
+       "      <td>0.003660</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.969120</td>\n",
+       "      <td>0.030880</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.993482</td>\n",
+       "      <td>0.006518</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.998614</td>\n",
+       "      <td>0.001386</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.977252</td>\n",
+       "      <td>0.022748</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.950000</td>\n",
+       "      <td>0.050000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.998614</td>\n",
+       "      <td>0.001386</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.937780</td>\n",
+       "      <td>0.062220</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.009288</td>\n",
+       "      <td>0.990712</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    star    quasar  white dwarf\n",
+       "0    0.0  1.000000     0.000000\n",
+       "1    0.0  1.000000     0.000000\n",
+       "2    0.0  1.000000     0.000000\n",
+       "3    0.0  1.000000     0.000000\n",
+       "4    0.0  1.000000     0.000000\n",
+       "5    0.0  0.996340     0.003660\n",
+       "6    0.0  0.969120     0.030880\n",
+       "7    0.0  0.993482     0.006518\n",
+       "8    0.0  0.998614     0.001386\n",
+       "9    0.0  1.000000     0.000000\n",
+       "10   0.0  1.000000     0.000000\n",
+       "11   0.0  0.000000     1.000000\n",
+       "12   0.0  1.000000     0.000000\n",
+       "13   0.0  0.977252     0.022748\n",
+       "14   0.0  0.950000     0.050000\n",
+       "15   0.0  0.998614     0.001386\n",
+       "16   0.0  1.000000     0.000000\n",
+       "17   0.0  1.000000     0.000000\n",
+       "18   0.0  0.937780     0.062220\n",
+       "19   0.0  0.009288     0.990712"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "prob_df = pd.DataFrame(prediction_prob, columns=cl_names)\n",
+    "prob_df.head(20)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Feature Importance"
    ]
   },
@@ -1183,11 +1394,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 52,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-26T20:43:53.942890Z",
-     "start_time": "2019-08-26T20:43:52.986669Z"
+     "end_time": "2019-08-27T15:08:08.312826Z",
+     "start_time": "2019-08-27T15:08:06.758745Z"
     }
    },
    "outputs": [
@@ -1216,11 +1427,207 @@
     "\n",
     "# predict\n",
     "pred_class = best_rf_clf.predict(data_ul)\n",
+    "pred_prob = best_rf_clf.predict_proba(data_ul)\n",
     "\n",
     "out = np.zeros((len(pred_class), data_ul.shape[1] + 1))\n",
     "out[:,:data_ul.shape[1]] = data_ul[:][:]\n",
     "out[:, -1] = pred_class [:]\n",
     "np.savetxt(\"classifications.csv\", out, delimiter=\",\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-08-27T15:08:37.991220Z",
+     "start_time": "2019-08-27T15:08:37.943308Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>star</th>\n",
+       "      <th>quasar</th>\n",
+       "      <th>white dwarf</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.999495</td>\n",
+       "      <td>0.000505</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.999306</td>\n",
+       "      <td>0.000694</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.998991</td>\n",
+       "      <td>0.001009</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0.999495</td>\n",
+       "      <td>0.000505</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0.999150</td>\n",
+       "      <td>0.000850</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>0.999360</td>\n",
+       "      <td>0.000640</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>0.999359</td>\n",
+       "      <td>0.000641</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>0.999371</td>\n",
+       "      <td>0.000629</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>0.899531</td>\n",
+       "      <td>0.100469</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>0.949391</td>\n",
+       "      <td>0.050609</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>0.999418</td>\n",
+       "      <td>0.000582</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>0.999445</td>\n",
+       "      <td>0.000555</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>0.999445</td>\n",
+       "      <td>0.000555</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>0.145046</td>\n",
+       "      <td>0.854954</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>0.999306</td>\n",
+       "      <td>0.000694</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>0.991837</td>\n",
+       "      <td>0.008163</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>0.999347</td>\n",
+       "      <td>0.000653</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>0.998991</td>\n",
+       "      <td>0.001009</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>0.994029</td>\n",
+       "      <td>0.005971</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>0.998689</td>\n",
+       "      <td>0.001311</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        star    quasar  white dwarf\n",
+       "0   0.999495  0.000505          0.0\n",
+       "1   0.999306  0.000694          0.0\n",
+       "2   0.998991  0.001009          0.0\n",
+       "3   0.999495  0.000505          0.0\n",
+       "4   0.999150  0.000850          0.0\n",
+       "5   0.999360  0.000640          0.0\n",
+       "6   0.999359  0.000641          0.0\n",
+       "7   0.999371  0.000629          0.0\n",
+       "8   0.899531  0.100469          0.0\n",
+       "9   0.949391  0.050609          0.0\n",
+       "10  0.999418  0.000582          0.0\n",
+       "11  0.999445  0.000555          0.0\n",
+       "12  0.999445  0.000555          0.0\n",
+       "13  0.145046  0.854954          0.0\n",
+       "14  0.999306  0.000694          0.0\n",
+       "15  0.991837  0.008163          0.0\n",
+       "16  0.999347  0.000653          0.0\n",
+       "17  0.998991  0.001009          0.0\n",
+       "18  0.994029  0.005971          0.0\n",
+       "19  0.998689  0.001311          0.0"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pred_prob_df = pd.DataFrame(pred_prob, columns=cl_names)\n",
+    "pred_prob_df.head(20)"
    ]
   },
   {
@@ -1319,6 +1726,90 @@
     "plt.colormaps()\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
