--- a/supervised.ipynb
+++ b/supervised.ipynb
@@ -175,6 +175,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Importing data"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {
@@ -206,6 +213,7 @@
     }
    ],
    "source": [
+    "# pandas DataFrame\n",
     "df = pd.read_csv(\"%s/data/SDSS_all_classes_21.csv\" % (dirpath))\n",
     "df = df.sample (20000)\n",
     "print(df.info())\n",
